--- a/CajeroAutomaticoWeb/cajero-automatico-web/src/index.css
+++ b/CajeroAutomaticoWeb/cajero-automatico-web/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+:root{
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
